# rtcvis

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  build.sh  example.py  plf.py  pyproject.toml
.github/workflows/: deploy-webgui.yml  python-app.yml
src/rtcvis/: __init__.py  conv.py  line.py  new_conv.py  old_vis.py  plf.py  plot_conv.py  plot_plf.py  point.py  rtc.py  rtcvis.py
tests/: test_conv.py  test_full_conv.py  test_line.py  test_line_intersection.py  test_plf_add.py  test_plf_add_point.py  test_plf_eq.py  test_plf_extrema.py  test_plf_floored.py  test_plf_from_rtctoolbox.py  test_plf_get_value.py  test_plf_init.py  test_plf_integerized.py  test_plf_list_min_max.py  test_plf_match.py  test_plf_max.py  test_plf_merge.py  test_plf_min_max.py  test_plf_simplified.py  test_plf_sub.py  test_plf_transformed.py  test_plf_trunc.py  test_rtc_out.py
webgui/: index.html  scripts.js  styles.css
