# pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rtcvis"
version = "0.1.0"
description = "Tool for visualizing Real Time Calculus (RTC) operations"
dependencies = ["numpy", "matplotlib"]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest", "pre-commit"]

[tool.mypy]
files = ["src/rtcvis", "tests", "example.py"]
