# pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rtcvis"
version = "0.1.0"
description = "Tool for visualizing Real Time Calculus (RTC) operations"
dependencies = ["matplotlib"]
requires-python = ">=3.12"
readme = "README.md"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rtcvis = ["py.typed"]

[project.optional-dependencies]
dev = ["pytest", "pre-commit", "mypy", "black", "build"]

[tool.mypy]
files = ["src/rtcvis", "tests", "example.py"]
exclude = "(^\\.venv/|^\\.git/|^build/|^dist/)"
